--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,73 @@
-<!DOCTYPE html>
+<!doctype html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Totiparks list</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="{% static " css
+    /style.css" %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>Totipark</title>
 </head>
 <body>
-<h2>testing this app</h2>
+<nav>
+    <div class="container nav-wrapper">
+        <a href="/" class="brand-logo">Totipark List</a>
+        <ul id="nav-mobile" class="right">
+            <li><a href="/">home</a></li>
+        </ul>
+    </div>
+</nav>
+<h2 style="text-align: center">what do you want to search for on Totipark's List</h2>
+<div class="row">
+    <div class="container">
+        <div class="col s4 ">
+            <div class="center">
+                <i class="large material-icons" style="color: #EE6E73">flash_on</i>
+                <p>Fast craigslist web scraper</p>
+                <p class="ligth center">Scrape away rigth here with a beautiful GUI.</p>
+            </div>
+
+        </div>
+
+        <div class="col s4">
+            <div class="center">
+                <i class="large material-icons" style="color: orange">camera</i>
+                <p>Filter your searches</p>
+                <p class="ligth center">We build in functionality to filter based on pricing.</p>
+
+            </div>
+        </div>
+        <div class="col s4">
+            <div class="center">
+                <i class="large material-icons" style="color: blue">chrome_reader_mode</i>
+                <p>A much sexier front-end to craigslist</p>
+                <p class="ligth center">We build this we Love</p>
+
+            </div>
+        </div>
+    </div>
+<div class="container">
+    <form action="{% url 'new_search' %}" method="post">
+        {% csrf_token %}
+        <input type="text" name="search" placeholder="search">
+        <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+            <i class="material-icons right">send</i>
+        </button>
+    </form>
+</div>
+</div>
+
+{% block content %}
+
+
+{% endblock %}
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
+
